[workspace]
members = [
  "contracts/cw-croncat",
  "contracts/cw-rules",
  "packages/cw-croncat-core",
  "packages/generic-query",
  "packages/cw-rules-core",
  "ci/gas-benchmark",
  "ci/non-ci-integrated-tests",
]

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'abort'
incremental = false
overflow-checks = true
